yoshimi 2.1.2 M

2022-4-23 Will
bn2119
* Adjusted position of Random Walk controls.
* Updated User Guide Image.
* Swapped order of some of these entries.
  Makes more sense!

bn2118
* Changed Random Walk window to horizontal layout.
* Revised Config window layout.
* Initial update to User Guide for new features.

2022-4-23 Will
bn2117
* Bugfix: New FLTK commands not disabled for headless build.

bn2116
* Bugfix: Missing random walk exit branch when loading instrument.

2022-4-22 Will
bn2115
* Revised position of new controls in PadSynth window.
* Completed text rescaling in Retrigger window.

2022-4-21 Hermann
Landing "padthread" feature
* Extensive rework of FFTW memory management
* rework and clean-up of Legato / Portament notes
* Notes and parameters mostly use unique_ptr for memory management
* PADSynth wavetables now built in background thread
* crossfade on playing notes when new PADSynth wavetable ready
* PADSynth may self-retrigger PADSynth wavetable build with random walk
* ability to cover Legato, Portamento and XFade with automated tests

2022-4-21 Will
bn2113
* Switched keyboard undo/redo fro main.cpp to MasterUI.fl

2022-4-20 Will
bn2112
* Bugfix: unable to cancel envelope freemode.

2022-4-18 Will
bn2111
* Placed copy of Yoshimi_License_History.txt in doc
* Removed 'library' from all licenses.

2022-4-17 Will
bn2110
* Fixed regression (not reporting effect types)
* Removed invalid class link in MasterMisc

2022-4-14 Will
bn2109
* BugFix: previous fix didn't get the root cause.
  Repeated key handler creation.

2022-4-7 Will
bn2108
* BugFix: filer window becomes slow to respond after many calls.

2022-4-2 Will
* Added tooltips to Undo/Redo
* Modified GUI resonance window event handler.
  It was interfering with Undo/Redo actions.
* Corrected GUI oscilator window event handler.
  It was always capturing mouse events.

* Refined SubSynth Undo/Redo
* Refined Resonance Undo/Redo

2022-4-1 Will
* Changed some names to make effect controls clearer.
