@@ -1,5 +1,5 @@
 # data file for the Fltk User Interface Designer (fluid)
-version 1.0305
+version 1.0308
 header_name {.h}
 code_name {.cc}
 comment {PartUI.h} {not_in_source in_header
@@ -296,7 +296,7 @@ class PartKitItem {: {public Fl_Group}
         callback {//
         int answer = 1;
         if (o->value() == 0)
-            answer = (choice(synth, "", "Yes", "No", "Delete the item?") > 1);
+            answer = (choice(synth, "", "Yes", "No", "Delete the item?\\nThis action can't be reversed and will erase the 'undo' list.") > 1);
         if (answer != 0)
         {
             if (o->value() == 0)
